--- a/TheGame.csproj
+++ b/TheGame.csproj
@@ -42,28 +42,31 @@
     <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Animation\CritterAnimationResolver.cs" />
+    <Compile Include="Animation\IAnimationResolver.cs" />
+    <Compile Include="Animation\StaticAnimationResolver.cs" />
     <Compile Include="Configuration\WorldConfiguration.cs" />
     <Compile Include="Configuration\WorldConfigurationParser.cs" />
     <Compile Include="Enums\MoveDirectionType.cs" />
     <Compile Include="Objects\BackgroundObject.cs" />
     <Compile Include="Objects\Critter.cs" />
-    <Compile Include="Landscape.cs" />
+    <Compile Include="Objects\Landscape.cs" />
     <Compile Include="Factories\ObjectsFactory.cs" />
-    <Compile Include="Character.cs" />
+    <Compile Include="Objects\Character.cs" />
     <Compile Include="Enums\ObjectStateType.cs" />
     <Compile Include="Enums\RunStateType.cs" />
     <Compile Include="Game1.cs" />
-    <Compile Include="ObjectInGame.cs" />
+    <Compile Include="Objects\ObjectInGame.cs" />
     <Compile Include="GameState.cs" />
     <Compile Include="GameStatistic.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Animation\CharacterAnimationResolver.cs" />
     <Compile Include="Utilities\FrameCounter.cs" />
     <Compile Include="Utilities\ObjectSpecification.cs" />
     <Compile Include="Utilities\TextureInfo.cs" />
-    <Compile Include="Utilities\Vector2Int.cs" />
     <Compile Include="World.cs" />
-    <Compile Include="WorldConfigurationLoader.cs" />
+    <Compile Include="Configuration\WorldConfigurationLoader.cs" />
     <Compile Include="WorldState.cs" />
   </ItemGroup>
   <ItemGroup>
