--- a/TheGame.csproj
+++ b/TheGame.csproj
@@ -49,11 +49,12 @@
     <Compile Include="Collision\CollisionResolver.cs" />
     <Compile Include="Configuration\WorldConfiguration.cs" />
     <Compile Include="Configuration\WorldConfigurationParser.cs" />
+    <Compile Include="DrawHandler.cs" />
     <Compile Include="Enums\GameStateType.cs" />
     <Compile Include="Enums\MoveDirectionType.cs" />
     <Compile Include="Move\CharacterMoveHandler.cs" />
+    <Compile Include="Move\CritterMoveHandler.cs" />
     <Compile Include="Objects\BackgroundObject.cs" />
-    <Compile Include="Objects\Barrier.cs" />
     <Compile Include="Objects\Critter.cs" />
     <Compile Include="Objects\ForegroundObject.cs" />
     <Compile Include="Objects\Item.cs" />
@@ -67,7 +68,6 @@
     <Compile Include="GameState.cs" />
     <Compile Include="GameStatistic.cs" />
     <Compile Include="Objects\RotatingObject.cs" />
-    <Compile Include="Objects\Tulip.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Animation\CharacterAnimationResolver.cs" />
