Overhaul of the project solution. Refurbished and fixed to run.

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,8 @@
-
-*.pdb
-*.exe
-*.mgcontent
-*.xnb
-*.exe
-*.mgcontent
-*.pdb
-*.pdb
-bin/DesktopGL/AnyCPU/Debug/Content/Game/Character.xnb
+*.lock
+*.ide-shm
+*.ide
+*.ide-wal
+*.manifest
+*.testlog
+bin/*
+obj/*
